--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,3 +37,15 @@ body {
   h5 {font-size: 25px;}
   p {font-size: 10px;}
 }
+
+.caption {
+  h3 {
+    font-size: 17px;
+    margin: 2px;
+  }
+
+  p {
+    font-size: 15px;
+    margin: 0px;
+  }
+}
