--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <% flash.each do |name, msg| %>
     <% if msg.is_a?(String) %>
-      <div class="alert alert-<%= name == :notice ? "success" : "danger" %> alert-dismissiable">
+      <div class="alert alert-<%= name.to_s == "notice" ? "success" : "danger" %> alert-dismissiable">
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       </div>
