shotop: add banner to homepage

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,3 +49,9 @@ body {
     margin: 0px;
   }
 }
+
+.jumbotron {
+  background-image: url('banjo_jumbotron.jpg');
+  h1, h2 { font-family: guardian-egyptt, georgia, serif;
+   }
+}
