--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,3 +1,8 @@
+<div class="jumbotron"
+  <h1>Handcrafted items from around the globe</h1>
+  <h2>Discover one of a kind items</h2>
+</div>
+
 <div class="center">
   <div class="row">
     <% @listings.each do |listing| %>
