shotop: enable users to place orders

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -8,6 +8,10 @@
     <h3><%= @listing.name %></h3>
     <h5><%= number_to_currency(@listing.price) %></p>
     <p><%= @listing.description %></p>
+    <br>
+    <div class="center">
+      <%= link_to "But it Now!", new_listing_order_path(@listing), class: "btn btn-primary" %>
+    </div>
   </div>
 </div>
 
