shotop: updates nav and footer styles, app rename

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,7 @@
-<p>Copyright 2013</p>
+<div class="footer">
+  <div class="container-fluid">
+    <div class="content-frame">
+      <p>Copyright 2014</p>
+    </div>
+  </div>
+</div>
