--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,13 +7,13 @@ body {
 }
 
 .navbar-default {
-  background-color: #EFEFE8;
+  background-color: #FFF;
 }
 
 .navbar-default .navbar-brand {
-  font-family: guardian-egyptt, georgia, serif;
+  font-family: "Comic Sans","Arial",sans-serif;
   font-weight: 400;
-  color: #d5641c;
+  color: black;
   font-size: 30px;
 }
 
@@ -21,7 +21,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: bold;
-  color: #019285;
+  color: #6f6f6f;
+  text-decoration: none;
 }
 
 .center {
@@ -55,3 +56,15 @@ body {
   h1, h2 { font-family: guardian-egyptt, georgia, serif;
    }
 }
+
+.content-frame {
+  position: relative;
+  width: 960px;
+  height: 100%;
+  margin: 0 auto;
+}
+
+#footer {
+  background-color:#414141;
+}
+
